--- a/assets/02-css/04-cssAdvanced/06-css_multicolumn.html
+++ b/assets/02-css/04-cssAdvanced/06-css_multicolumn.html
@@ -34,12 +34,12 @@
 			블록 요소에 있어야 하는 열 수에 대한 정수 값을 사용합니다.<br>
 			깂이 auto인 경우 열 수는 <code>column-width</code>와 같은 다른 CSS 속성에 의해 결정됩니다.
 		</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>div {</li>
-				<li class="indent">column-count: number | auto | initial | inherits;</li>
-				<li>}</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [count]">
+			<textarea readonly="readonly">
+				div {
+					column-count: number | auto | initial | inherits;
+				}
+			</textarea>
 		</div>
 		<ol class="ol_lst mt_ms indent">
 			<li><code class="weight-500 t_blue bg_none">auto</code> : 초기값</li>
@@ -48,7 +48,7 @@
 
 		<section class="view_editor edit_code mt_l" data-target="css/step03/4.6.multi-column/4.6.multi-column-count.html">
 			<h3 class="ve_tit">multi-column count 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
@@ -60,17 +60,17 @@
 		<p class="mt_s">
 			칼럼 사이의 간격을 설정합니다.
 		</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>div {</li>
-				<li class="indent">column-gap: length(px, em) | percentage(%) | normal | initial | inherit;</li>
-				<li>}</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [gap]">
+			<textarea readonly="readonly">
+				div {
+					column-gap: length(px, em) | percentage(%) | normal | initial | inherit;
+				}
+			</textarea>
 		</div>
 
 		<section class="view_editor edit_code mt_l" data-target="css/step03/4.6.multi-column/4.6.multi-column-gap.html">
 			<h3 class="ve_tit">multi-column gap 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
@@ -82,17 +82,17 @@
 		<p class="mt_s">
 			칼럼의 너비를 설정합니다.
 		</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>div {</li>
-				<li class="indent">column-gap: auto | length(px, em, vw) | initial | inherit;</li>
-				<li>}</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [width]">
+			<textarea readonly="readonly">
+				div {
+					column-width: auto | length(px, em, vw) | initial | inherit;
+				}
+			</textarea>
 		</div>
 
 		<section class="view_editor edit_code mt_l" data-target="css/step03/4.6.multi-column/4.6.multi-column-width.html">
-			<h3 class="ve_tit">multi-column gap 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">multi-column width 예제</h3>
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
@@ -106,17 +106,17 @@
 			값을 all로 설정하면 요소가 나타나기 전에 모든 열에서 자동으로 균형을 맞춥니다. 이 요소는 새로운 블록 서식 컨텍스트를 설정합니다.<br>
 			둘 이상의 열에 걸쳐있는 요소를 스패닝 요소 라고합니다.
 		</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>div {</li>
-				<li class="indent">column-gap: none | all | initial | inherit;</li>
-				<li>}</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [span]">
+			<textarea readonly="readonly">
+				div {
+					column-span: none | all | initial | inherit;
+				}
+			</textarea>
 		</div>
 
 		<section class="view_editor edit_code mt_l" data-target="css/step03/4.6.multi-column/4.6.multi-column-span.html">
-			<h3 class="ve_tit">multi-column gap 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">multi-column span 예제</h3>
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
@@ -126,12 +126,12 @@
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">4.6.5. <i class="t_blue">column-fill</i></h2>
 		<p class="mt_s">칼럼을 어떻게 채울지 설정합니다.</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>div {</li>
-				<li class="indent">column-count: auto | balance | balance-all | initial | inherit;</li>
-				<li>}</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [fill]">
+			<textarea readonly="readonly">
+				div {
+					column-fill: auto | balance | balance-all | initial | inherit;
+				}
+			</textarea>
 		</div>
 		<ol class="ol_lst mt_ms indent">
 			<li><code class="weight-500 t_blue bg_none">balance</code> : 콘텐츠 내용보다 높이가 길다면 균형을 이루어 각 열의 아래쪽 부분을 빈 공간으로 남겨 둡니다.</li>
@@ -140,7 +140,7 @@
 
 		<section class="view_editor edit_code mt_l" data-target="css/step03/4.6.multi-column/4.6.multi-column-fill.html">
 			<h3 class="ve_tit">multi-column fill 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
@@ -150,25 +150,27 @@
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">4.6.6. <i class="t_blue">column-rule-style</i></h2>
 		<p class="mt_s">칼럼 사이에 들어갈 라인의 스타일을 설정합니다.</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>/* <'border-style'> values */</li>
-				<li>column-rule-style: none;</li>
-				<li>column-rule-style: hidden;</li>
-				<li>column-rule-style: dotted;</li>
-				<li>column-rule-style: dashed;</li>
-				<li>column-rule-style: solid;</li>
-				<li>column-rule-style: double;</li>
-				<li>column-rule-style: groove;</li>
-				<li>column-rule-style: ridge;</li>
-				<li>column-rule-style: inset;</li>
-				<li>column-rule-style: outset;</li>
-				<li></li>
-				<li>/* Global values */</li>
-				<li>column-rule-style: inherit;</li>
-				<li>column-rule-style: initial;</li>
-				<li>column-rule-style: unset;</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [column-rule-style]">
+			<textarea readonly="readonly">
+				div {
+					/* <'border-style'> values */
+					column-rule-style: none;
+					column-rule-style: hidden;
+					column-rule-style: dotted;
+					column-rule-style: dashed;
+					column-rule-style: solid;
+					column-rule-style: double;
+					column-rule-style: groove;
+					column-rule-style: ridge;
+					column-rule-style: inset;
+					column-rule-style: outset;
+
+					/* Global values */
+					column-rule-style: inherit;
+					column-rule-style: initial;
+					column-rule-style: unset;
+				}
+			</textarea>
 		</div>
 	</section>
 
@@ -176,19 +178,21 @@
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">4.6.7. <i class="t_blue">column-rule-color</i></h2>
 		<p class="mt_s">칼럼 사이에 들어갈 라인의 색상을 설정합니다.</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>/* &lt;color&gt; values */</li>
-				<li>column-rule-color: red;</li>
-				<li>column-rule-color: rgb(192, 56, 78);</li>
-				<li>column-rule-color: transparent;</li>
-				<li>column-rule-color: hsla(0, 100%, 50%, 0.6);</li>
-				<li></li>
-				<li>/* Global values */</li>
-				<li>column-rule-color: inherit;</li>
-				<li>column-rule-color: initial;</li>
-				<li>column-rule-color: unset;</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [column-rule-color]">
+			<textarea readonly="readonly">
+				div {
+					/* <color> values */
+					column-rule-color: red;
+					column-rule-color: rgb(192, 56, 78);
+					column-rule-color: transparent;
+					column-rule-color: hsla(0, 100%, 50%, 0.6);
+
+					/* Global values */
+					column-rule-color: inherit;
+					column-rule-color: initial;
+					column-rule-color: unset;
+				}
+			</textarea>
 		</div>
 	</section>
 
@@ -196,22 +200,22 @@
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">4.6.8. <i class="t_blue">column-rule</i></h2>
 		<p class="mt_s">모든 <code>columns</code> 속성을 이용한 스타일을 한 줄에 설정할 수 있습니다.</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>div {</li>
-				<li class="indent">column-rule: column-rule-width | column-rule-style | column-rule-color | initial | inherit;</li>
-				<li>}</li>
-				<li></li>
-				<li>column-rule: dotted;</li>
-				<li>column-rule: solid 8px;</li>
-				<li>column-rule: solid blue;</li>
-				<li>column-rule: thick inset blue;</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [column-rule]">
+			<textarea readonly="readonly">
+				div {
+					column-rule: column-rule-width | column-rule-style | column-rule-color | initial | inherit;
+
+					column-rule: dotted;
+					column-rule: solid 8px;
+					column-rule: solid blue;
+					column-rule: thick inset blue;
+				}
+			</textarea>
 		</div>
 
 		<section class="view_editor edit_code mt_l" data-target="css/step03/4.6.multi-column/4.6.multi-column-rule.html">
 			<h3 class="ve_tit">multi-column rule 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
@@ -221,29 +225,29 @@
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">4.6.9. <i class="t_blue">columns</i></h2>
 		<p class="mt_s">모든 <code>columns</code> 속성을 이용한 스타일을 한 줄에 설정할 수 있습니다.</p>
-		<div class="line_code_box line_code_number mt_m">
-			<ul>
-				<li>div {</li>
-				<li class="indent">columns : &lt;&apos;column-width&apos;&gt; || &lt;&apos;column-count&apos;&gt;;</li>
-				<li>}</li>
-				<li></li>
-				<li>/* Column width */</li>
-				<li>columns: 18em;</li>
-				<li></li>
-				<li>/* Column count */</li>
-				<li>columns: auto;</li>
-				<li>columns: 2;</li>
-				<li></li>
-				<li>/* Both column width and count */</li>
-				<li>columns: 2 auto;</li>
-				<li>columns: auto 12em;</li>
-				<li>columns: auto auto;</li>
-			</ul>
+		<div class="uk_gist_code_box mt_ms" data-tit="multi-column [columns]">
+			<textarea readonly="readonly">
+				div {
+					columns: <'column-width'> || <'column-count'>;
+
+					/* Column width */
+					columns: 18em;
+
+					/* Column count */
+					columns: auto;
+					columns: 2;
+
+					/* Both column width and count */
+					columns: 2 auto;
+					columns: auto 12em;
+					columns: auto auto;
+				}
+			</textarea>
 		</div>
 
 		<section class="view_editor edit_code mt_l" data-target="css/step03/4.6.multi-column/4.6.multi-columns.html">
 			<h3 class="ve_tit">multi-column columns 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
